--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,21 @@
-[tool.poetry]
+[project]
 name = "spoolman"
 version = "0.0.0"
 description = "Asynchronous Python client for Spoolman API"
-authors = ["Klaas Schoute <hello@student-techlife.com>"]
-maintainers = ["Klaas Schoute <hello@student-techlife.com>"]
+authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
+maintainers = [{name="Klaas Schoute", email="<hello@student-techlife.com>"}]
 license = "MIT"
+requires-python = ">=3.12"
 readme = "README.md"
-homepage = "https://github.com/klaasnicolaas/python-spoolman"
-repository = "https://github.com/klaasnicolaas/python-spoolman"
-documentation = "https://github.com/klaasnicolaas/python-spoolman"
 keywords = ["spoolman", "api", "async", "client"]
 classifiers = [
   "Framework :: AsyncIO",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Natural Language :: English",
-  "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: 3",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
@@ -27,11 +25,14 @@ packages = [
 
 [tool.poetry.dependencies]
 aiohttp = ">=3.0.0"
-python = "^3.11"
+python = "^3.12"
 yarl = ">=1.6.0"
 mashumaro = "^3.15"
 
-[tool.poetry.urls]
+[project.urls]
+homepage = "https://github.com/klaasnicolaas/python-spoolman"
+repository = "https://github.com/klaasnicolaas/python-spoolman"
+documentation = "https://github.com/klaasnicolaas/python-spoolman"
 "Bug Tracker" = "https://github.com/klaasnicolaas/python-spoolman/issues"
 Changelog = "https://github.com/klaasnicolaas/python-spoolman/releases"
 
@@ -64,7 +65,7 @@ show_missing = true
 # free to run mypy on Windows, Linux, or macOS and get consistent
 # results.
 platform = "linux"
-python_version = "3.11"
+python_version = "3.12"
 
 # flake8-mypy expects the two following for sensible formatting
 show_column_numbers = true
@@ -120,9 +121,10 @@ addopts = "--cov"
 asyncio_mode = "auto"
 
 [tool.ruff]
+target-version = "py312"
 lint.select = ["ALL"]
 lint.ignore = [
-  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
+  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions
   "D203",    # Conflicts with other rules
   "D213",    # Conflicts with other rules
   "D417",    # False positives in some occasions
@@ -131,7 +133,6 @@ lint.ignore = [
 
   # Conflicts with the Ruff formatter
   "COM812",
-  "ISC001",
 ]
 
 [tool.ruff.lint.flake8-pytest-style]
