--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,8 +47,10 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.13.0
   tweet:
     name: 🐦 Tweet the release
-    runs-on: ubuntu-latest
     needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: Eomm/why-don-t-you-tweet@v2
         with:
